[gd_scene load_steps=5 format=2]

[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/Assets/GUI_LevelSelectionWholeScreen_LevelDetailsPanel.png" type="Texture" id=1]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/Assets/GUI_LevelSelectionWholeScreen_Flag_Transparent.png" type="Texture" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/CoinsPanel/CoinsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/Subs/LevelDetailsPanel/GUI_LevelDetailsPanel.gd" type="Script" id=4]

[node name="LevelDetailsPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 150.0
margin_bottom = 150.0
texture = ExtResource( 1 )

[node name="DetailsContainer" type="MarginContainer" parent="."]
margin_right = 150.0
margin_bottom = 150.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 134.0
margin_bottom = 134.0
custom_constants/separation = 10

[node name="CoinsPanel" parent="DetailsContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 24.0
size_flags_horizontal = 6

[node name="LevelStatusPanel" type="MarginContainer" parent="DetailsContainer/VBoxContainer"]
margin_left = 14.0
margin_top = 34.0
margin_right = 103.0
margin_bottom = 52.0
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="DetailsContainer/VBoxContainer/LevelStatusPanel"]
margin_right = 89.0
margin_bottom = 18.0

[node name="LevelStatusLabel" type="Label" parent="DetailsContainer/VBoxContainer/LevelStatusPanel/HBoxContainer"]
margin_top = 2.0
margin_right = 70.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "Completed"

[node name="LevelStatusTexRect" type="TextureRect" parent="DetailsContainer/VBoxContainer/LevelStatusPanel/HBoxContainer"]
margin_left = 74.0
margin_right = 89.0
margin_bottom = 18.0
texture = ExtResource( 2 )
